cftemplates/RMIT Training/RMITBrownBagTemplate.yaml
Description: 'RMIT Example Template'

# ----- PARAMETERS -----
Parameters:
  VPCId:
      Description: VPC IDs
      Type: AWS::EC2::VPC::Id
      ConstraintDescription: Must be an existing VPC.
  SubnetId:
    Description: Subnet IDs
    Type: AWS::EC2::Subnet::Id
    ConstraintDescription: Must be an existing subnet.
  AMI:
    Description: Amazon Machine Image
    Type: String
    Default: ami-423bec20 # Latest version of Amazon Linux in ap-southeast-2 07/06/2018
  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues:
    - t2.nano
    - t2.micro
    - t2.small
    - t2.medium
    - t2.large
    ConstraintDescription: Must be a valid EC2 instance type.
  SSHAccessCidr:
      Description: The IP address range that can be used to SSH to the EC2 instances
      Type: String
      Default: 0.0.0.0/0
      AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName

# ----- RESOURCES -----
Resources:
  # EC2 Instances
  JumpHost:
      Type: AWS::EC2::Instance
      Properties:
        InstanceType: !Ref InstanceType
        SubnetId: !Ref SubnetId
        SecurityGroupIds:
        - !Ref JumpHostSG
        ImageId: !Ref AMI
        KeyName: !Ref KeyName
        IamInstanceProfile: !Ref RootInstanceProfile
        Tags:
        - Key: Name
          Value: !Join
                   - '_'
                   - - !Ref AWS::StackName
                     - JumpHost
        UserData:
          Fn::Base64: !Sub |
               #!/bin/bash -xe
               echo 'hello' > /tmp/awsuserdata.txt
  WebServer:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      SubnetId: !Ref SubnetId
      SecurityGroupIds:
      - !Ref WebServerSG
      ImageId: !Ref AMI
      Tags:
        - Key: Name
          Value: !Join
                   - '_'
                   - - !Ref AWS::StackName
                     - WebServer
      UserData:
        Fn::Base64: !Sub |
             #!/bin/bash -xe
             yum update -y
             yum -y install httpd
             service httpd start
  # Security Groups
  JumpHostSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH to Jump Host
      VpcId: !Ref VPCId
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref SSHAccessCidr
  WebServerSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH/HTTP to Web Server
      VpcId: !Ref VPCId
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        SourceSecurityGroupId: !Ref JumpHostSG
  # IAM Role
  RootRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          -
            Effect: "Allow"
            Principal:
              Service:
                - "ec2.amazonaws.com"
            Action:
              - "sts:AssumeRole"
      Path: "/"
      Policies:
        -
          PolicyName: "root"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              -
                Effect: "Allow"
                Action: "*"
                Resource: "*"
  RootInstanceProfile:
    Type: "AWS::IAM::InstanceProfile"
    Properties:
      Path: "/"
      Roles:
        -
          !Ref "RootRole"

# ----- OUTPUTS -----
Outputs:
  JumpHostID:
    Description: Jump Host's Instance ID
    Value: !Ref JumpHost
  JumpHostPublicIP:
    Description: Jump Host's Public IP
    Value: !GetAtt JumpHost.PublicIp
  WebServerID:
    Description: Web Server's Instance ID
    Value: !Ref WebServer
  WebServerPrivateIP:
    Description: Web Server's Private IP
    Value: !GetAtt WebServer.PrivateIp
  WebServerPublicDNS:
    Description: Web Server's Public DNS
    Value: !GetAtt WebServer.PublicDnsName
